# mix-sim

./: Cargo.toml  LICENSE  README.md
backup/transporter/: inbox_transport.rs  mod.rs  whatsapp.rs
config/: config.yaml
metrics/prometheus/: prometheus.yml
src/: bytes.rs  client.rs  client_command.rs  client_send_error.rs  config.rs  directory.rs  directory_registration.rs  get_registration_error.rs  main.rs  message.rs  packet.rs  prometheus.rs  registration_error.rs  server.rs  server_command.rs  server_registration.rs  user.rs
src/client/: client.rs  client_command.rs  client_send_error.rs  mod.rs
src/directory/: directory.rs  directory_command.rs  directory_registration.rs  directory_registration_error.rs  get_directory_registration_error.rs  mod.rs
src/server/: mod.rs  server.rs  server_command.rs  server_registration.rs  server_registration_error.rs
