[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.13"
prometheus-client = "0.23.1"
rand = { version = "0.9.2", features = ["alloc"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
sphinx-packet = "0.6.0"
tiny_http = "0.12.0"
tokio = { version = "1.46.1", features = ["sync", "rt-multi-thread", "macros", "time", "signal"] }
uuid = { version = "1.17.0", features = ["v4"] }
x25519-dalek = "2.0.1"
